--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <table>
             <tr>
               <td><h2>Result:</h2></td>
-              <td><h2>5</h2></td>
+              <td><h2 id="result-1">5</h2></td>
             </tr>
           </table>
         </div>
@@ -49,7 +49,7 @@
           <table>
             <tr>
               <td><h2>Result:</h2></td>
-              <td><h2>5</h2></td>
+              <td><h2 id="result-2">5</h2></td>
             </tr>
           </table>
         </div>
@@ -69,7 +69,7 @@
           <table>
             <tr>
               <td><h2>Result:</h2></td>
-              <td><h2>5</h2></td>
+              <td><h2 id="result-3">5</h2></td>
             </tr>
           </table>
         </div>
@@ -90,7 +90,7 @@
           <table>
             <tr>
               <td><h2>Result:</h2></td>
-              <td><h2>5</h2></td>
+              <td><h2 id="result-4">5</h2></td>
             </tr>
           </table>
         </div>
