--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Insert the value of X and Y to calculate the following Equation:</p>
         <div class="insert-number">
           <input type="number" id="numb-x" placeholder="X Value" />
-          <button class="calculate-button">
+          <button class="calculate-button" id="button-1">
             <img src="assets/calculator.png" />
           </button>
           <input type="number" id="numb-y" placeholder="Y Value" />
