--- a/index.html
+++ b/index.html
@@ -53,17 +53,12 @@
         </p>
         <div class="insert-text">
           <input type="text" id="no-space" placeholder="Insert String" />
-          <button class="go-button">
+          <button class="go-button" id="button-3">
             <img src="assets/go-button.png" />
           </button>
         </div>
         <div>
-          <table>
-            <tr>
-              <td><h2>Result:</h2></td>
-              <td><h2 id="result-3">5</h2></td>
-            </tr>
-          </table>
+          <h2 id="result-3"></h2>
         </div>
       </div>
       <div class="api">
