--- a/index.html
+++ b/index.html
@@ -68,18 +68,13 @@
           contains alphabets and numbers:
         </p>
         <div class="insert-text">
-          <input type="text" id="password" placeholder="Insert String" />
-          <button class="go-button">
+          <input type="password" id="password" placeholder="Insert Password" />
+          <button class="go-button" id="button-4">
             <img src="assets/go-button.png" />
           </button>
         </div>
         <div>
-          <table>
-            <tr>
-              <td><h2>Result:</h2></td>
-              <td><h2 id="result-4">5</h2></td>
-            </tr>
-          </table>
+          <h2 id="result-4"></h2>
         </div>
       </div>
     </div>
