--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>API - 2</h1>
         <p>Insert a Word to check if it's a Palindrome or Not:</p>
         <div class="insert-text">
-          <input type="text" id="palindrome" placeholder="Insert String" />
+          <input type="text" id="palindrome" placeholder="Insert a Word" />
           <button class="go-button" id="button-2">
             <img src="assets/go-button.png" />
           </button>
